--- a/parukaslv/index.html
+++ b/parukaslv/index.html
@@ -37,7 +37,7 @@
                     <h3>Hello</h3>
                     <h1>I am <span>Deniss Jerošenko</span></h1>
                     <p>Currently I am studying at RVT as a programmer in the 3rd year,
-                    in the future I want to work in the field of web design.aaaa</p>
+                    in the future I want to work in the field of web design.</p>
                     <button type="button"><a href="form.html">Learn more about me using form</a></button>
                 </div>
             </div>
