--- a/parukaslv/index.html
+++ b/parukaslv/index.html
@@ -25,8 +25,8 @@
 
                     <ul class="nav-list">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About me</a></li>
-                        <li><a href="#">Works</a></li>
+                        <li><a href="aboutme.html">About me</a></li>
+                        <li><a href="works.html">Works</a></li>
                         <li class="btn"><a href="#">Contact me</a></li>
                     </ul>
                 </nav>
