--- a/parukaslv/works.html
+++ b/parukaslv/works.html
@@ -8,6 +8,31 @@
     <link rel="stylesheet" href="static/works.css">
 </head>
 <body>
-    
+    <section class="hero">
+        <div class="main-width">
+            <header>
+                <div class="logo">
+                    <ul>D</ul>
+                </div>
+
+                <nav>
+                    <div class="hamb">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+
+                    <ul class="nav-list">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="aboutme.html">About me</a></li>
+                        <li class="btn"><a href="works.html">Works</a></li>
+                        <li><a href="index.html">Contact me</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="container">
+                
+            </div>
+        </section>
 </body>
 </html>
