--- a/parukaslv/aboutme.html
+++ b/parukaslv/aboutme.html
@@ -5,9 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="static/form.css">
+    <link rel="stylesheet" href="static/aboutme.css">
 </head>
 <body>
-    
+    <section class="hero">
+        <div class="main-width">
+            <header>
+                <div class="logo">
+                    <ul>D</ul>
+                </div>
+
+                <nav>
+                    <div class="hamb">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+
+                    <ul class="nav-list">
+                        <li><a href="#">Home</a></li>
+                        <li class="btn"><a href="aboutme.html">About me</a></li>
+                        <li><a href="works.html">Works</a></li>
+                        <li><a href="index.html">Contact me</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </section>
 </body>
 </html>
