--- a/parukaslv/form.html
+++ b/parukaslv/form.html
@@ -38,6 +38,7 @@
                 <div class="button">
                     <input type="submit" value="Submit">
                 </div>
+                    <button type="button1"><a href="index.html">Back</a></button>
             </div>
         </div>
     </form>
